Fix: Color of loading indicator is not visible in light theme

--- a/ladmin/src/load-indicators.css
+++ b/ladmin/src/load-indicators.css
@@ -110,10 +110,10 @@
 }
 
 .three-bar-pulse {
-  color: #FFF;
+  /* color: #FFF; */
   position: relative;
   font-size: 11px;
-  background: #FFF;
+  /* background: #FFF; */
   animation: escaleY 1s infinite ease-in-out;
   width: 1em;
   height: 4em;
@@ -126,7 +126,7 @@
   position: absolute;
   top: 0;
   left: 2em;
-  background: #FFF;
+  /* background: #FFF; */
   width: 1em;
   height: 4em;
   animation: escaleY 1s infinite ease-in-out;
